[tool.poetry]
name = "mqtt-to-eventhub"
version = "0.1.0"
description = ""
authors = ["rob al <mnbf9rca@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
python-dotenv-vault = "^0.6.3"
azure-eventhub = "^5.11.1"
asyncio-mqtt = "^0.16.1"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
types-paho-mqtt = "^1.6.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
freezegun = "^1.2.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
