[tool.poetry]
name = "mqtt-to-eventhub"
version = "0.1.0"
description = ""
authors = ["rob al <mnbf9rca@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv-vault = "^0.6.3"
azure-eventhub = "^5.11.4"
requests = "^2.32.0"
aiomqtt = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pre-commit = "^3.4.0"
types-paho-mqtt = "^1.6.0.20240106"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
freezegun = "^1.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
coverage = {extras = ["toml"], version = "^7.3.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.tox/*",
    "*/.eggs/*",
    "*/.vscode-remote/*"
]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-branch --cov-report term-missing -vv --strict-markers -rfE"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv"
]